[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-ollama>=1.0.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.1",
    "tqdm>=4.67.3",
    "unstructured[docx,pdf]>=0.20.2",
]
